<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="mrc.appdichat.SignupActivity">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/main_image_view"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="32dp"
                android:src="@drawable/bloodbanklogo"/>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_name_field"
                app:passwordToggleEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp">
            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textPersonName">
            </android.support.design.widget.TextInputEditText></android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_phone_field"
                app:passwordToggleEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="number">
                </android.support.design.widget.TextInputEditText>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress">
                </android.support.design.widget.TextInputEditText>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_pass_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword">

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_cpass_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirmpassword"
                    android:inputType="textPassword">

                </android.support.design.widget.TextInputEditText>
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/sign_register_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="24dp"
                android:background="#f00"
                android:text="@string/create_an_account"
                android:textColor="#fff"
                android:textStyle="bold"/>

        </LinearLayout>
    </LinearLayout>


</ScrollView>
