<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/donate_image_view"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="12dp"
            android:background="@drawable/shadow_rect"
            android:foregroundGravity="center_horizontal"
            android:src="@drawable/donate"
            tools:ignore="ContentDescription"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name_donor"
                android:textColor="@color/colorAccent"
                android:textColorHighlight="@color/colorAccent"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/donate_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#fff"
                android:fadeScrollbars="true"
                android:textColor="#fff"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phone_donor"
                android:textColor="@color/colorAccent"
                android:textColorHighlight="@color/colorAccent"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/donate_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#fff"
                android:fadeScrollbars="true"
                android:inputType="number"
                android:textColor="#fff"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bloodgroup"
                android:textColor="@color/colorAccent"
                android:textColorHighlight="@color/colorAccent"
                android:textSize="14sp"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/donate_blood_group_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#fff"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/address_donor"
                android:textColor="@color/colorAccent"
                android:textColorHighlight="@color/colorAccent"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/donate_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#fff"
                android:fadeScrollbars="true"
                android:hint="@string/type"

                android:inputType="textMultiLine"
                android:textColor="#fff"

                android:textColorHint="#123456"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/donate_address_check_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#fff"
                android:paddingLeft="4dp"
                android:text="@string/current_loc"
                android:textColor="#fff"
                android:textSize="14sp"
                android:textStyle="italic|bold"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <Button
            android:id="@+id/donate_submit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_margin="28dp"
            android:background="#fff"
            android:text="@string/submit"
            android:textColor="#f00"
            android:textStyle="bold"/>


    </LinearLayout>

</ScrollView>
