<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/search_image_view"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/shadow_rect"
        android:foregroundGravity="center_horizontal"
        android:src="@drawable/searchblood"
        tools:ignore="ContentDescription"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name_seeker"
            android:textColor="@color/colorAccent"
            android:textColorHighlight="@color/colorAccent"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/search_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#fff"
            android:fadeScrollbars="true"
            android:textColor="#fff"
            android:textSize="18sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bloodgroup"
            android:textColor="@color/colorAccent"
            android:textColorHighlight="@color/colorAccent"
            android:textSize="14sp"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/search_blood_group_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#fff"/>

    </LinearLayout> <Button
    android:id="@+id/search_submit"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_gravity="center"
    android:layout_margin="28dp"
    android:background="#fff"
    android:text="@string/submit"
    android:textColor="#f00"
    android:textStyle="bold"/></LinearLayout>